# JetsonScope

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  TASKS.md  install.sh
.github/workflows/: ci.yml
docs/: README.md  docker.md  parity.md  scripts.md  telemetry.md  tests.md
docs/reference/: controls.md  index.md  metrics.md  protocol.md
examples/: README.md  config.rs  controls.rs  debug_snapshot.rs  env_vars.rs  hardware.rs  jetson_release.rs  jetson_swap.rs  snapshot.rs  stats.rs  telemetry.rs
install/: jscoped.service
packaging/jetson/: README.md  pack.sh
scripts/: jetsonscope-control.sh  jetsonscope-logger.sh  jetsonscope-service.sh
src/: app.rs  collector.rs  control.rs  hardware.rs  health.rs  lib.rs  main.rs  meta.rs  metrics_auth.rs  parser.rs  processes.rs  protocol.rs  ui.rs
tests/: control_mocks.rs  integration_socket.rs  parser_samples.rs
